airflow/logs/dag_id=nba_transform_to_dwh/run_id=manual__2025-06-20T130954.479053+0000/task_id=load_dim_time/attempt=1.log
[2025-06-20T13:10:01.785+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-20T13:10:01.812+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:54.479053+00:00 [queued]>
[2025-06-20T13:10:01.821+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:54.479053+00:00 [queued]>
[2025-06-20T13:10:01.822+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-06-20T13:10:01.878+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load_dim_time> on 2025-06-20 13:09:54.479053+00:00
[2025-06-20T13:10:01.898+0000] {standard_task_runner.py:63} INFO - Started process 1480 to run task
[2025-06-20T13:10:01.911+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'nba_transform_to_dwh', 'load_dim_time', 'manual__2025-06-20T13:09:54.479053+00:00', '--job-id', '228', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpbyusu_bv']
[2025-06-20T13:10:01.916+0000] {standard_task_runner.py:91} INFO - Job 228: Subtask load_dim_time
[2025-06-20T13:10:02.127+0000] {task_command.py:426} INFO - Running <TaskInstance: nba_transform_to_dwh.load_dim_time manual__2025-06-20T13:09:54.479053+00:00 [running]> on host 5ea278fdf3a6
[2025-06-20T13:10:02.319+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='nba_transform_to_dwh' AIRFLOW_CTX_TASK_ID='load_dim_time' AIRFLOW_CTX_EXECUTION_DATE='2025-06-20T13:09:54.479053+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-20T13:09:54.479053+00:00'
[2025-06-20T13:10:02.320+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-20T13:10:02.348+0000] {etl_pipeline.py:497} INFO - Ensuring dimension table 'dimtime' exists...
[2025-06-20T13:10:02.409+0000] {etl_pipeline.py:499} INFO - Loading/updating data into 'dimtime'...
[2025-06-20T13:10:02.411+0000] {etl_pipeline.py:503} ERROR - Failed to create or load dimension 'dimtime'. Error: INSERT has more expressions than target columns
LINE 3: ...                   SELECT quarter, timeremaining, date  FROM...
                                                             ^

[2025-06-20T13:10:02.412+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-20T13:10:02.412+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 500, in fetch_dim_time
    cursor.execute(insert_query)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 3: ...                   SELECT quarter, timeremaining, date  FROM...
                                                             ^

[2025-06-20T13:10:02.427+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=nba_transform_to_dwh, task_id=load_dim_time, run_id=manual__2025-06-20T13:09:54.479053+00:00, execution_date=20250620T130954, start_date=20250620T131001, end_date=20250620T131002
[2025-06-20T13:10:02.468+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 228 for task load_dim_time (INSERT has more expressions than target columns
LINE 3: ...                   SELECT quarter, timeremaining, date  FROM...
                                                             ^
; 1480)
[2025-06-20T13:10:02.525+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-20T13:10:02.541+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-20T13:10:02.570+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
